made single article page responsive

--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -169,6 +169,12 @@ strong {
   }
 }
 
+@media screen and (max-width: 1080px) {
+  .single-article h2 {
+    font-size: 2.488em;
+  }
+}
+
 @media screen and (max-width: 1000px) {
   .sidebar {
     font-size: 70%;
@@ -208,11 +214,35 @@ strong {
   .articles {
     margin-top: 2.986em;
   }
+
+  .single-article {
+    padding: 0 5% 4.3em;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .single-article h2 {
+    font-size: 2.074em;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .single-article h2 {
+    font-size: 1.728em;
+  }
+
+  .single-article h4 {
+    font-size: 1.2em;
+  }
 }
 
 @media screen and (max-width: 430px) {
-  h2 {
+  h2, .single-article h2 {
     font-size: 1.2em;
+  }
+
+  .single-article h4 {
+    font-size: 1em;
   }
 
   .sidebar p {
