--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -118,7 +118,7 @@ strong {
     text-decoration: none;
   }
   .articles p {
-    color: #918f8c;
+    color: #999;
     font: normal 1.2em "museo";
     line-height: 170%;
     margin: 0.625em 0 0 0;
@@ -132,7 +132,7 @@ strong {
    font-size: 2.986em;
  }
  .single-article h4 {
-   color: #aaa;
+   color: #999;
    border: none;
    margin: 2.074em 0 0 0;
    padding: 0;
@@ -140,6 +140,15 @@ strong {
    font-weight: 700;
    letter-spacing: 2px;
    text-transform: uppercase;
+ }
+ .gist-file {
+   border-bottom: none !important;
+   margin-top: 2.074em;
+   margin-bottom: 2.074em !important;
+ }
+ .gist-meta {
+   display: none;
+   padding: 0;
  }
 
 /* misc */
