added and update blog post

--- a/source/articles/2014-03-03-estimating-projects.html.erb
+++ b/source/articles/2014-03-03-estimating-projects.html.erb
@@ -24,10 +24,10 @@ you can increase the accuracy of your estimate.</p>
 <p>Lets take an optimistic approach for an example. Let's
 say your iteration requires you to clean up the styling on a page. An optimistic mindset may think, 
 "The codebase is probably well written and I'll be able to figure things out relatively quickly with a simple glance." 
-On the flip side, a pessmistic mindset may think, "I'm willing to bet that the code is absolutely terribly, I'm pretty sure
+On the flip side, a pessmistic mindset may think, "I'm willing to bet that the code is absolutely terrible, I'm pretty sure
 I should just scrap everything and start over."</p>
 
-<p>I know the above examples are a bit extreme, but I think you guys get the idea.</p>
+<p>I know the above examples are a bit extreme, but I really wanted to illustrate getting out of a mindset and into another.</p>
 
 <h4>Two Heads Are Better</h4>
 <p>We pair programming pretty regularly here at 8th Light, this pairing segways into IPMs. Having an 
@@ -35,9 +35,9 @@ extra head opens up diaglogue to break down the problem from different angles. I
 you provide constant feedback and keep the flow going.</p>
 
 <h4>Talk It Through</h4>
-<p>This final tip piggybacks off the second. If you happen to be lacking a second opinion, a good way to 
-mitigate that is by throughly talking through your thought process in front of the client. Doing this helps flesh out your 
-thoughts as well as bring confidence to the client, because you hand holding them through the process.</p>
+<p>This final tip piggybacks off the second. If you are making estimations on your own, a good way to 
+go about your estimation is to throughly talk through your thought process in front of the client. Doing this helps flesh out your 
+thoughts as well as bring confidence to the client by hand holding them through the process.</p>
 
 <p>That's it for now.</p>
 
