changed permalink to position project

--- a/source/articles/2014-03-03-positioning-project.html.erb
+++ b/source/articles/2014-03-03-positioning-project.html.erb
@@ -2,6 +2,6 @@
 title: Positioning Project
 date: 2014-03-03 18:49 UTC
 category: projects
-permalink: position-project
+permalink: positioning-project
 ---
 
