--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -18,7 +18,7 @@ h2 {
   color: #333;
   font: normal 1.728em "futura-pt";
   font-weight: 700;
-  margin: 0.694em 0 0.625em 0;
+  margin: 0.64em 0 0.625em 0;
   text-transform: uppercase;
 }
 
@@ -106,12 +106,11 @@ strong {
   }
   .date {
     color: #aaa;
-    display: block;
     font: italic 1em "museo";
-    margin: 1.2em 0 0 0;
+    margin: 1.2em 0 0 0.625em;
   }
   .articles h2 {
-    margin-top: 0;
+    margin-top: 0.694em;
   }
   .articles h2 a {
     color: #333;
@@ -121,7 +120,7 @@ strong {
     color: #555;
     font: normal 1.2em "museo";
     line-height: 170%;
-    margin: 0.625em 0 0 0;
+    margin: 0.694em 0 0 0;
   }
 
 .single-article {
