updated blog post

--- a/source/articles/2014-03-03-using-moodboards.html.erb
+++ b/source/articles/2014-03-03-using-moodboards.html.erb
@@ -6,14 +6,17 @@ layout: articles-layout
 ---
 
 <p>
-  I have read about mood boards in the past, but have not personally tried it out myself with a client, until recently.
+  I have read about mood boards in the past, but have not personally tried it out myself 
+  with a client, until recently.
 </p>
 
 SPLIT_SUMMARY_BEFORE_THIS
 
 <h4>What Is a Mood Board?</h4>
 <p>
-  So what is a mood board? In short, it’s a collection of assets that tries to capture the feel and direction of a project. These assets can be both digital and tactile. Keep in mind mood boards are like sketches, they aren’t intended to be polished versions of the project.
+  So what is a mood board? In short, it’s a collection of assets that tries to capture 
+  the feel and direction of a project. These assets can be both digital and tactile. 
+  Keep in mind mood boards are like sketches, they aren’t intended to be polished versions of the project.
 </p>
 
 <h4>Why Use Them?</h4>
@@ -22,28 +25,44 @@ SPLIT_SUMMARY_BEFORE_THIS
 </p>
 
 <p>
-  It was due to the openness of this particular subject that prompted me to explore mood boards. I felt I had a good grasp of what the client wanted, however I wanted to confirm this without spending too much time with the details, as we all know can be a resource drain. Mood boards help mitigate spending a lot of time going in the wrong direction, as everything is in flux.
+  It was due to the openness of this particular subject that prompted me to explore mood boards. 
+  I felt I had a good grasp of what the client wanted, however I wanted to confirm this without 
+  spending too much time with the details, as we all know can be a resource drain. 
+  Mood boards help mitigate spending a lot of time going in the wrong direction, as everything is in flux.
 </p>
 
 <p>
-  While this is my first time using a mood board, I feel projects that are open or vague are good reasons to use mood boards. They allow you to explore and experiment, also they are great at furthering discussion at your next meeting since nothing is highly defined, everything is open to change/refinement. 
+  While this is my first time using a mood board, I feel projects that are open or vague are 
+  good reasons to use mood boards. They allow you to explore and experiment, also they are great 
+  at furthering discussion at your next meeting since nothing is highly defined, everything is 
+  open to change/refinement. 
 </p>
 
 <h4>How I Proceeded</h4>
 <p>
-  I typically have imagery start floating in my head during meetings, as I process the client’s requests. It’s this flow that I tried to emulate during the creation of my mood board. I wanted uninhibited flow. How I achieved this is by collecting every asset I thought fit the feel and direction of this project, without questioning or debating why. My assets were all digital images for those wondering.
+  I typically have imagery start floating in my head during meetings, as I process the 
+  client’s requests. It’s this flow that I tried to emulate during the creation of my mood board. 
+  I wanted uninhibited flow. How I achieved this is by collecting every asset I thought fit 
+  the feel and direction of this project, without questioning or debating why. 
+  My assets were all digital images for those wondering.
 </p>
 
 <p>
-  As you can imagine, my assets grew pretty large, which is fine. The next thing I had to do was refine. Admittedly this wasn’t as fun as the first part of this process, but a necessary one.
+  As you can imagine, my assets grew pretty large, which is fine. The next thing I had to do was refine. 
+  Admittedly this wasn’t as fun as the first part of this process, but a necessary one.
 </p>
 
 <h4>How I Presented</h4>
 <p>
-  The great thing about presenting mood boards is the expectation of the client. They aren’t looking for polish, they are looking for a direction, this leads to a meeting which primarily comprises of open discussion. It’s through this open discussion that helps you further narrow down the project.
+  The great thing about presenting mood boards is the expectation of the client. They aren’t 
+  looking for polish, they are looking for a direction. With this in mind, I approach meetings 
+  that center around mood boards like an open forum. It’s through this open discussion that helps 
+  you further narrow down the project.
 </p>
 
 <h4>Final Thoughts</h4>
 <p>
-  I like mood boars. They are relatively easy to put together. It brings clients closer to the process, it also keeps meetings light and conversational, which I can’t see anything negative about. Best of all it mitigates the possibility of going down the wrong path.
+  I like mood boards. They are relatively easy to put together. It brings clients closer to 
+  the process, it also keeps meetings light and conversational, which I can’t see anything 
+  negative about. Best of all it mitigates the possibility of going down the wrong path.
 </p>
