--- a/source/articles/2014-03-03-using-moodboards.html.erb
+++ b/source/articles/2014-03-03-using-moodboards.html.erb
@@ -25,7 +25,7 @@ SPLIT_SUMMARY_BEFORE_THIS
 </p>
 
 <p>
-  It was due to the openness of this particular subject that prompted me to explore mood boards. 
+  It was due to the openness of this particular project that prompted me to explore mood boards. 
   I felt I had a good grasp of what the client wanted, however I wanted to confirm this without 
   spending too much time with the details, as we all know can be a resource drain. 
   Mood boards help mitigate spending a lot of time going in the wrong direction, as everything is in flux.
@@ -40,7 +40,7 @@ SPLIT_SUMMARY_BEFORE_THIS
 
 <h4>How I Proceeded</h4>
 <p>
-  I typically have imagery start floating in my head during meetings, as I process the 
+  I typically have imagery start floating in my head during meetings as I process the 
   client’s requests. It’s this flow that I tried to emulate during the creation of my mood board. 
   I wanted uninhibited flow. How I achieved this is by collecting every asset I thought fit 
   the feel and direction of this project, without questioning or debating why. 
@@ -49,7 +49,7 @@ SPLIT_SUMMARY_BEFORE_THIS
 
 <p>
   As you can imagine, my assets grew pretty large, which is fine. The next thing I had to do was refine. 
-  Admittedly this wasn’t as fun as the first part of this process, but a necessary one.
+  Admittedly this wasn’t as fun as the first part of this process. Again, I didn't scrutinize too much in the refinement process, I employed the help of my mentor as a second pair of eyes to have a more objective way of purning assets out.
 </p>
 
 <h4>How I Presented</h4>
@@ -64,5 +64,5 @@ SPLIT_SUMMARY_BEFORE_THIS
 <p>
   I like mood boards. They are relatively easy to put together. It brings clients closer to 
   the process, it also keeps meetings light and conversational, which I can’t see anything 
-  negative about. Best of all it mitigates the possibility of going down the wrong path.
+  negative about. Best of all it mitigates the possibility of going down the wrong path without wasting company resources.
 </p>
