--- a/source/articles/2014-03-10-oocss-methodology.html.erb
+++ b/source/articles/2014-03-10-oocss-methodology.html.erb
@@ -7,15 +7,15 @@ layout: articles-layout
 
 <p>I recently attended a presentation that covered reusable HTML, CSS, and JS. During the presentation I was re-introduced to OOCSS, a CSS methodology that I have heard about in the past, but never really dug into.</p>
 
+SPLIT_SUMMARY_BEFORE_THIS
+
 <p>I've been looking to challenge how I currently approach CSS, and OOCSS seemed like a good place to start.</p>
 
 <h4>What is OOCSS?</h4>
 
-
 <p>OOCSS, stands for Object Oriented CSS. It was a methodology pioneered by Nicole Sullivan to encourage code reuse, efficiency, and maintainability in CSS.</p>
 
 <h4>The Two Principles of OOCSS</h4>
-
 
 <p><strong>Separate Structure and Skin</strong></p>
 
