updated blog post

--- a/source/articles/2014-03-17-smacss.html.erb
+++ b/source/articles/2014-03-17-smacss.html.erb
@@ -7,7 +7,7 @@ layout: articles-layout
 
 <p>Continuing my exploration on challenging the way I write CSS, I stumbled onto SMACSS, which stands for scalable and modular architecture CSS.</p>
 
-<p>I haven't dug into SMACSS enough yet to properly write a blog post on it's intricacies. What I do want to quickly cover is how SMACSS organizes CSS, something which was not covered in OOCSSS.</p>
+<p>I haven't dug into SMACSS enough yet to properly write a blog post on it's intricacies. What I do want to quickly cover is how SMACSS organizes CSS, something which was not covered during my exploration of OOCSSS.</p>
 
 <p>For the past two years, I've had my own system of organizing my CSS. It worked great for me, because I was the sole front-end developer. Apprenticing at 8th Light forced me to take a step back, and make serious considerations of the organization of my CSS, since I won't be the only one looking at the code.</p>
 
