--- a/source/articles/2014-03-17-brick-by-brick.html.erb
+++ b/source/articles/2014-03-17-brick-by-brick.html.erb
@@ -7,6 +7,8 @@ layout: articles-layout
 
 <p>My mentor Stephanie passed along a book for me to read titled Brick by Brick authored by Stephen McCraine. At first glance I wasn't sure what to make of it, you see, this book isn't actually a book, it's a comic.</p>
 
+SPLIT_SUMMARY_BEFORE_THIS
+
 <p>Upon opening the comic, I was stopped in my tracks with it's opening introduction. The idea that people are born with talent vs people acquire talent has always been a fascinating topic for me. Personally my beliefs sit somewhere in the middle. The author sides with the idea that deliberate practice can achieve mastery, and I certainly can't argue with this.</p>
 
 <h4>My Takeaway</h4>
