updated blog post

--- a/source/articles/2014-03-17-brick-by-brick.html.erb
+++ b/source/articles/2014-03-17-brick-by-brick.html.erb
@@ -36,3 +36,5 @@ SPLIT_SUMMARY_BEFORE_THIS
 <p>Brick by Brick is filled with lots of commonsense. It's funny how commonsense is usually what leaves our body first. This is a nice little handbook to keep around to remind us and keep us on track towards artistic mastery.</p>
 
 <p>You can learn more of the principles by grabbing a copy <a href="http://doodlealley.com/">here</a>.</p>
+
+<p>Until next time!</p>
