--- a/source/articles/2014-03-17-brick-by-brick.html.erb
+++ b/source/articles/2014-03-17-brick-by-brick.html.erb
@@ -25,7 +25,7 @@ SPLIT_SUMMARY_BEFORE_THIS
 
 <p><strong>Make Plans</strong></p>
 
-<p>Now that you have a direction, it's important to make plans to reach your goals. If you're like me, your goal is lofty. To avoid getting paralyzed by the enormity of your goal, you must break it down into bite size pieces. This is called planning. By planning you can take steps towards your goal instead of being weighed down by your goal.</p>
+<p>Now that you have a direction, it's important to make plans to reach your goals. If you're like me, your goals are lofty. To avoid getting paralyzed by the enormity of your goal, you must break it down into bite size pieces. This is called planning. By planning you can take steps towards your goal instead of being weighed down by your goal.</p>
 
 <p><strong>Be Proactive</strong></p>
 
