--- a/source/articles/2014-03-17-brick-by-brick.html.erb
+++ b/source/articles/2014-03-17-brick-by-brick.html.erb
@@ -37,4 +37,4 @@ SPLIT_SUMMARY_BEFORE_THIS
 
 <p>You can learn more of the principles by grabbing a copy <a href="http://doodlealley.com/">here</a>.</p>
 
-<p>Until next time!</p>
+<p>Until next time!</p> test
