--- a/source/articles/2014-03-17-brick-by-brick.html.erb
+++ b/source/articles/2014-03-17-brick-by-brick.html.erb
@@ -31,7 +31,7 @@ SPLIT_SUMMARY_BEFORE_THIS
 
 <p>Being proactive mean you diligently execute your plans and you put yourself in a better position to react to the future instead of being pushed around by the future. You do not wait for what can be accomplished today for tomorrow.</p>
 
-<p><strong>Closing</strong></p>
+<h4>Closing</h4>
 
 <p>Brick by Brick is filled with lots of commonsense. It's funny how commonsense is usually what leaves our body first. This is a nice little handbook to keep around to remind us and keep us on track towards artistic mastery.</p>
 
