updated blog post

--- a/source/articles/2014-03-17-brick-by-brick.html.erb
+++ b/source/articles/2014-03-17-brick-by-brick.html.erb
@@ -9,7 +9,7 @@ layout: articles-layout
 
 SPLIT_SUMMARY_BEFORE_THIS
 
-<p>Upon opening the comic, I was stopped in my tracks with it's opening introduction. The idea that people are born with talent vs people acquire talent has always been a fascinating topic for me. Personally my beliefs sit somewhere in the middle. The author sides with the idea that deliberate practice can achieve mastery, and I certainly can't argue with this.</p>
+<p>The opening paragraphs of this book is thought provoking. The idea that people are born with talent vs people acquire talent has always been a fascinating topic for me. Personally my beliefs sit somewhere in the middle. The author sides with the idea that deliberate practice can achieve mastery, and I certainly can't argue with that.</p>
 
 <h4>My Takeaway</h4>
 
