updated blog post

--- a/source/articles/2014-04-07-retrospective.html.erb
+++ b/source/articles/2014-04-07-retrospective.html.erb
@@ -31,6 +31,6 @@ layout: articles-layout
 
 <p>Any perfectionist can relate to this. When I work on a project I put my all into it, I simply will not settle for good enough. The problem with this mentality is burnout, it makes you stay up late at night to finish something that is good enough. Being in a constant state of burnout will have adverse effects on your health and inevitably in your work.</p>
 
-<p>This does not mean that you should not strive for perfection, instead you should approach perfection incrementally, instead of going for an all or nothing approach. This will give you balance as well as a peace of mind. Remember projects are usually marathons and not sprints.</p>
+<p>This does not mean that you should not strive for perfection, instead you should approach perfection incrementally and not go for an all or nothing approach. This will give you balance as well as a peace of mind. Remember projects are usually marathons and not sprints.</p>
 
 <p>I'm sure there are more things I would tell my past self, but these are principles that I feel resonate strongly with me today and looking forwards to the future.</p>
