--- a/source/news-article-project/index.html.erb
+++ b/source/news-article-project/index.html.erb
@@ -40,7 +40,7 @@ layout: projects-layout
     </header>
 
     <article>
-      <div class="row row-padding cf">
+      <div class="row row-padding cf separator">
         <figure class="column">
           <img class="first-image" src="images/first-image.jpg">
         </figure>
