--- a/source/news-article-project/stylesheets/main.css.scss
+++ b/source/news-article-project/stylesheets/main.css.scss
@@ -80,7 +80,7 @@ aside p {
   color: #009ce1;
   font-size: 0.9rem;
   font-weight: 400;
-  padding: 0 0 0 1.2rem;
+  padding: 0.2rem 0 0 1.2rem;
 }
 
 .content p {
@@ -213,11 +213,11 @@ footer {
   -webkit-column-gap:40px; /* Chrome, Safari, Opera */
   -moz-column-gap:40px; /* Firefox */
   column-gap:40px;
-  padding: 1.5rem 0 0 2.5rem;
+  padding: 1.2rem 0 0 2.5rem;
 }
 
 .reverse-content {
-  padding: 1.5rem 2.5rem 0 0;
+  padding: 1.2rem 2.5rem 0 0;
 }
 
 .thin {
@@ -274,6 +274,11 @@ footer {
   display: block;
 }
 
+.separator:after {
+  content: "hi";
+  display: block;
+  border-bottom: 1px dotted #000;
+}
 
 /* Clearfix */
 .cf:before,
