--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,6 +12,8 @@ per_page: 10
   <div class="project-list">
     <h3>Projects</h3>
 
+    <a class="portfolio-button"></a>
+
     <ul>
       <% blog.articles.select {|a| a.data.category == "projects"}[0..10].each do |article| %>
         <li><a href="<%= article.data.permalink %>"><%= article.title %></a></li>
