--- a/source/portfolio/stylesheets/main.css.scss
+++ b/source/portfolio/stylesheets/main.css.scss
@@ -35,7 +35,7 @@ h1, h2, h3 {
 
 h1 {
   font-size: 2.5rem;
-  margin: 2rem 0 0 0;
+  margin: 2rem 0 1rem 0;
 }
 
 h2 {
@@ -123,7 +123,7 @@ aside {
   color: #ff3030;
 }
 
-.button, .ui-btn {
+.button {
   background: #ed531b !important;
   border: none !important;
   border-radius: 5px !important;
