--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -102,7 +102,7 @@ strong {
   color: #fff !important;
   cursor: pointer !important;
   display: block;
-  font: 700 1.5rem "proxima-nova" !important;
+  font: 700 1.5rem "futura-pt" !important;
   margin: 1rem 0 0 0;
   padding: 1rem 0 !important;
   text-align: center;
