--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,13 +12,13 @@ per_page: 10
   <div class="project-list">
     <h3>Projects</h3>
 
-    <a class="portfolio-button"></a>
+    <a href="/portfolio/" class="portfolio-button">Portfolio</a>
 
-    <ul>
-      <% blog.articles.select {|a| a.data.category == "projects"}[0..10].each do |article| %>
-        <li><a href="<%= article.data.permalink %>"><%= article.title %></a></li>
-      <% end %>
-    </ul>
+    <!-- <ul> -->
+    <!--   <% blog.articles.select {|a| a.data.category == "projects"}[0..10].each do |article| %> -->
+    <!--     <li><a href="<%= article.data.permalink %>"><%= article.title %></a></li> -->
+    <!--   <% end %> -->
+    <!-- </ul> -->
   </div>
 </div>
 
