--- a/source/portfolio/index.html.erb
+++ b/source/portfolio/index.html.erb
@@ -51,14 +51,14 @@ layout: projects-layout
     <!-- </section> -->
 
     <ul class="project-list">
-      <h3>Project List</h3>
+      <!-- <h3>Project List</h3> -->
 
       <li>
         <img class="project-image" src="images/news-project-ss.jpg">
 
         <div class="description">
           <h2>Magazine Article Project</h2>
-          <p>Find a magazine article and recreate it using semantic HTML 5 elements using CSS to to syle.</p>
+          <p>Find a magazine article and recreate it using semantic HTML 5 elements using CSS to style.</p>
         </div>
 
         <div class="link-holder">
