--- a/source/alignment-project/index.html.erb
+++ b/source/alignment-project/index.html.erb
@@ -13,10 +13,11 @@ layout: projects-layout
     <link href="./stylesheets/main.css" media="screen" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="//use.typekit.net/sti6pcv.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
-      <a id="guide" class="show"></a>
+      <a id="guide" class="show"><i class="fa fa-dot-circle-o"></i></a>
 
       <div class="row no-padding-top">
         <section class="border">
