updated portfolio page

--- a/source/portfolio/index.html.erb
+++ b/source/portfolio/index.html.erb
@@ -54,6 +54,18 @@ layout: projects-layout
       <!-- <h3>Project List</h3> -->
 
       <li>
+        <img class="project-image" src="images/alignment-project-ss.jpg">
+
+        <div class="description">
+          <h2>Alignment Project</h2>
+          <p>Project demonstrating the importance of alignment in web design.</p>
+        </div>
+
+        <div class="link-holder">
+          <a href="../alignment-project/">View Project</a>
+        </div>
+      </li>
+      <li>
         <img class="project-image" src="images/news-project-ss.jpg">
 
         <div class="description">
