--- a/source/alignment-project/index.html.erb
+++ b/source/alignment-project/index.html.erb
@@ -38,13 +38,11 @@ layout: projects-layout
         <blockquote>
             <img src="images/dr-seuss.jpg">
 
-            <p>
-              “You have brains in your head. 
-              You have feet in your shoes. 
-              You can steer yourself in any direction you choose. 
-              You're on your own, and you know what you know. 
-              And you are the guy who'll decide where to go.”
-            </p>
+            <p>“You have brains in your head. 
+            You have feet in your shoes. 
+            You can steer yourself in any direction you choose. 
+            You're on your own, and you know what you know. 
+            And you are the guy who'll decide where to go.”</p>
 
             <cite>-Dr. Seuss</cite>
         </blockquote>
@@ -56,10 +54,8 @@ layout: projects-layout
           <figcaption>
             <strong>Exotic Wood Floors</strong>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Donec sit amet dapibus massa, vel laoreet ante. 
-            Cras convallis libero nec massa bibendum bibendum. 
-            Donec ut porta metus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Donec sit amet dapibus massa, vel laoreet ante.</p>
           </figcaption>
         </figure>
       </div>
