--- a/source/alignment-project/stylesheets/main.css.scss
+++ b/source/alignment-project/stylesheets/main.css.scss
@@ -46,9 +46,9 @@ figure {
   font-size: 1.2rem;
   font-style: italic;
   margin: 0 auto;
-  width: 840px;
+  width: 630px;
   img {
-    margin-right: 40px;
+    margin-right: 1rem;
   }
 }
 
@@ -160,9 +160,9 @@ section {
 }
 
 .third {
-  left: 180px;
+  left: 285px;
   top: 1042px;
-  width: 840px;
+  width: 630px;
 }
 
 /* Clearfix */
