changed to smart quotes

--- a/source/alignment-project/index.html.erb
+++ b/source/alignment-project/index.html.erb
@@ -38,11 +38,11 @@ layout: projects-layout
         <blockquote>
             <img src="images/dr-seuss.jpg">
 
-            <p>“You have brains in your head. 
+            <p>&#8220;You have brains in your head. 
             You have feet in your shoes. 
             You can steer yourself in any direction you choose. 
             You're on your own, and you know what you know. 
-            And you are the guy who'll decide where to go.”</p>
+            And you are the guy who'll decide where to go.&#8221;</p>
 
             <cite>-Dr. Seuss</cite>
         </blockquote>
