--- a/source/alignment-project/index.html.erb
+++ b/source/alignment-project/index.html.erb
@@ -20,7 +20,7 @@ layout: projects-layout
       <a id="guide" class="show"><i class="fa fa-dot-circle-o"></i></a> 
       <div class="row no-padding-top">
         <section class="border">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet dapibus massa, vel laoreet ante. Cras convallis libero nec massa bibendum bibendum. Donec ut porta metus. Mauris nulla purus, euismod quis tincidunt quis, viverra nec enim. Donec fermentum ligula at augue sodales, vitae imperdiet neque cursus. Donec porta augue augue, vel blandit nunc dictum quis. Sed ultrices tellus sollicitudin feugiat sagittis. Duis blandit nulla eu neque semper, eget mattis orci molestie. Nunc tincidunt nibh ut dui mollis tempor. Duis dignissim faucibus nulla ac tempor. Cras viverra accumsan diam nec hendrerit.</p>
+          <p>This blog post will be a little different. I was given an alignment project where I had to demonstrate its importance. To be honest I gave this project a bit more thought than I was anticipating. To me, alignment is like breathing, you simply do it, so thinking up of a meaningful way to demonstrate alignment was surprisingly challenging.</p>
         </section>
       </div>
 
@@ -30,8 +30,9 @@ layout: projects-layout
 
       <div class="row cf">
         <section class="column">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet dapibus massa, vel laoreet ante. Cras convallis libero nec massa bibendum bibendum. Donec ut porta metus. Mauris nulla purus, euismod quis tincidunt quis, viverra nec enim. Donec fermentum ligula at augue sodales, vitae imperdiet neque cursus. Donec porta augue augue, vel blandit nunc dictum quis. Sed ultrices tellus sollicitudin feugiat sagittis. Duis blandit nulla eu neque semper, eget mattis orci molestie. Nunc tincidunt nibh ut dui mollis tempor. Duis dignissim faucibus nulla ac tempor. Cras viverra accumsan diam nec hendrerit.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet dapibus massa, vel laoreet ante. Cras convallis libero nec massa bibendum bibendum. Donec ut porta metus. Mauris nulla purus, euismod quis tincidunt quis, viverra nec enim. Donec fermentum ligula at augue sodales, vitae imperdiet neque cursus. Donec porta augue augue, vel blandit nunc dictum quis. Sed ultrices tellus sollicitudin feugiat sagittis. Duis blandit nulla eu neque semper, eget mattis orci molestie. Nunc tincidunt nibh ut dui mollis tempor. Duis dignissim faucibus nulla ac tempor. Cras viverra accumsan diam nec hendrerit.</p>
+          <p><strong>My Design Choice -</strong> Alignment is the placement of elements such that edges line up along common rows or columns, or their bodies along a common center. Keeping this definition in mind, I came up with a design that was devoid of any design distractions. By keeping the design to a bare minimum, you can focus on the alignment shared by elements on the page.</p>
+          <p><strong>Why Alignment is Important -</strong> Alignment is important because it gives you visual cues to the unity and cohesion of elements on the page. It also guides you through the flow of the page. This is such an obvious answer its importance can seem to have been over emphasized. Imagine reading paragraphs that share a thought, but don't share an alignment, it would be difficult to make sense of it.</p>
+          <p>I mentioned that alignment guides you through the flow of the page. You may or may not have noticed that you are being guided downwards. Although there are other elements that break this flow and fight for your attention, you are being drawn back due to its strong visual cue in comparison to the other elements on this page.</p>
         </section>
 
         <blockquote>
@@ -61,7 +62,11 @@ layout: projects-layout
 
       <div class="row">
         <section>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet dapibus massa, vel laoreet ante. Cras convallis libero nec massa bibendum bibendum. Donec ut porta metus. Mauris nulla purus, euismod quis tincidunt quis, viverra nec enim. Donec fermentum ligula at augue sodales, vitae imperdiet neque cursus. Donec porta augue augue, vel blandit nunc dictum quis. Sed ultrices tellus sollicitudin feugiat sagittis. Duis blandit nulla eu neque semper, eget mattis orci molestie. Nunc tincidunt nibh ut dui mollis tempor. Duis dignissim faucibus nulla ac tempor. Cras viverra accumsan diam nec hendrerit.</p>
+          <p><strong>Types of Alignment -</strong> There are three common types of alignment, left, right, and center. You have probably noticed what you are reading right now is left aligned. More often than not, you will be utilizing left alignment over the other two.</p>
+          <p>Left and right alignment provide stronger alignment cues by having clear edges where you can more easily associate with other elements on the page. Center alignment does not have this distinction making it more difficult to make clear connections with other elements.</p>
+          <p>To further illustrate the alignment on this page, you can hit the target logo on the top right to initiate an overlay.</p>
+          <p><strong>More Complex Alignment - </strong> I personally haven't implemented alignment that fall under "complex", but it's worth bringing up. Alignment that are diagonal, spiral, and circular in nature are considered complex alignment.</p>
+          <p>Depending on the type of complex alignment, there are a few things to keep in mind. Take a diagonal alignment for example, the angle in which the diagonal edge traverses should be above 30 degrees, as anything below this is too subtle. Circular/spiral alignments may need the assistance of an alignment path (much like my overlay) to make the path more apparent.</p>
         </section>
       </div>
 
