updated blog post

--- a/source/articles/2014-05-05-alignment.html.erb
+++ b/source/articles/2014-05-05-alignment.html.erb
@@ -5,8 +5,8 @@ category: General
 layout: articles-layout
 ---
 
-<p>Alignment is...</p>
+<p>Alignment is... SPLIT_SUMMARY_BEFORE_THIS important. <a href="../alignment-project/">Clicky</a></p>
 
-SPLIT_SUMMARY_BEFORE_THIS
 
-<p>important. <a href="../alignment-project/">Click here to find out why.</a></p>
+
+<p></p>
