changed guide to px

--- a/source/alignment-project/stylesheets/main.css.scss
+++ b/source/alignment-project/stylesheets/main.css.scss
@@ -87,7 +87,7 @@ section {
 #guide {
   color: #9dd45c;
   cursor: pointer;
-  font-size: 2rem;
+  font-size: 30px;
   position: fixed;
     right: 10px;
     top: 10px;
