removed hover state

--- a/source/alignment-project/stylesheets/main.css.scss
+++ b/source/alignment-project/stylesheets/main.css.scss
@@ -91,9 +91,9 @@ section {
   position: fixed;
     right: 10px;
     top: 10px;
-  &:hover {
-    color: #ffeb64 !important;
-  }
+  // &:hover {
+  //   color: #ffeb64 !important;
+  // }
 }
 
 .column {
