--- a/source/alignment-project/index.html.erb
+++ b/source/alignment-project/index.html.erb
@@ -17,7 +17,7 @@ layout: projects-layout
   </head>
   <body>
     <div class="container">
-      <a id="guide" class="show"><i class="fa fa-dot-circle-o"></i></a> 
+      <a id="guide" data-id="circle-animation" class="show"><i class="fa fa-dot-circle-o"></i></a> 
       <div class="row no-padding-top">
         <section class="border">
           <p>This blog post will be a little different. I was given an alignment project where I had to demonstrate its importance. To be honest I gave this project a bit more thought than I was anticipating. To me, alignment is like breathing, you simply do it, so thinking up of a meaningful way to demonstrate alignment was surprisingly challenging.</p>
@@ -78,7 +78,7 @@ layout: projects-layout
       </div>
     </div>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="../javascripts/jquery-1.11.1.min.js"></script>
     <script src="./js/main.js"></script>	
 	</body>
 </html>
